tests/ui/discord-frontend/entity_macro/expected_literal_15.stderr
error: expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_15.rs:40:25
   |
LL |     relates = [multiple MemberEntity]
   |                         ^^^^^^^^^^^^

error: aborting due to 1 previous error

